# defer-support-copilot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
ai-service/: Dockerfile  pyproject.toml
ai-service/app/: main.py
ai-service/app/core/: config.py  logging.py
ai-service/app/generation/: answer_generator.py  clarification_generator.py  escalation_response_generator.py  prompt_builder.py
ai-service/app/grounding/: citation_builder.py  evidence_bundle.py  grounding_checker.py
ai-service/app/retrieval/: query_builder.py  retrieval_service.py  vector_retriever.py
ai-service/app/scoring/: confusion_scorer.py  effort_estimator.py  frustration_scorer.py  repetition_detector.py  scoring_service.py  trust_risk_scorer.py
ai-service/app/services/: support_response_service.py
backend/: Dockerfile  pom.xml
backend/src/main/resources/: application.yml
docs/: architecture.md
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/app/cases/: page.tsx
frontend/src/app/cases/[conversationId]/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/evals/: page.tsx
frontend/src/features/casefile/components/: CustomerStateCard.tsx
frontend/src/features/cases/api/: cases-api.ts
frontend/src/features/cases/components/: CaseFilters.tsx  CaseList.tsx  CaseListItem.tsx  CaseStatusBadge.tsx
frontend/src/shared/components/: ErrorBoundary.tsx  Skeleton.tsx
frontend/src/shared/layout/: AppShell.tsx  SidebarNav.tsx
scripts/: test_respond.json
(+98 files in other folders)
