[project]
name = "defer-ai-service"
version = "0.1.0"
description = "Defer — intelligence and RAG layer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
    "pgvector>=0.3.0",
    "asyncpg>=0.29.0",
    "sentence-transformers>=3.0.0",
    "pydantic-settings>=2.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
